<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="5"
    android:columnCount="4"
    >
    <EditText android:layout_columnSpan="4"
        android:id="@+id/edt_data"
        android:textSize="@dimen/n_size"
        android:layout_width="match_parent"
        />
    <Button
        android:text="@string/n_7"
        android:id="@+id/btn_7"
        android:textSize="@dimen/n_size"
        />
    <Button
        android:text="@string/n_8"
        android:textSize="@dimen/n_size"
        android:id="@+id/btn_8"
        />
    <Button
        android:text="@string/n_9"
        android:id="@+id/btn_9"
        android:textSize="@dimen/n_size"
        />
    <Button
        android:text="@string/multi_x"
        android:id="@+id/multi"
        android:textSize="@dimen/n_size"
        />
    <Button
        android:text="@string/n_4"
        android:id="@+id/btn_4"
        android:textSize="@dimen/n_size"
        />
    <Button
        android:text="@string/n_5"
        android:id="@+id/btn_5"
        android:textSize="@dimen/n_size"
        />
    <Button
        android:text="@string/n_6"
        android:id="@+id/btn_6"
        android:textSize="@dimen/n_size"
        />
    <Button
        android:text="@string/resta"
        android:id="@+id/btn_resta"
        android:textSize="@dimen/n_size"
        />
    <Button
        android:text="@string/n_1"
        android:id="@+id/btn_1"
        android:textSize="@dimen/n_size"
        />
    <Button
        android:text="@string/n_2"
        android:id="@+id/btn_2"
        android:textSize="@dimen/n_size"
        />
    <Button
        android:text="@string/n_3"
        android:id="@+id/btn_3"
        android:textSize="@dimen/n_size"
        />
    <Button
        android:text="@string/mas"
        android:id="@+id/btn_mas"
        android:textSize="@dimen/n_size"
        />
    <Button
        android:text="@string/div"
        android:id="@+id/btn_div"
        android:textSize="@dimen/n_size"
        />
    <Button
        android:text="@string/cero_0"
        android:id="@+id/btn_0"
        android:textSize="@dimen/n_size"
        />
    <Button
        android:text="@string/punto"
        android:id="@+id/btn_punto"
        android:textSize="@dimen/n_size"
        />
    <Button
        android:text="="
        android:id="@+id/btn_igual"
        android:textSize="@dimen/n_size"
        />

</GridLayout>
